testsuite/tests/parsetree/test.reference
source_jane_street.ml: FAIL, CANNOT PARSE (test.ml 123:2)
File "source_jane_street.ml", line 768, characters 18-19:
768 |   let e = stack_ a#b in
                        ^
Error: Syntax error
=====================================================
source_jane_street.ml: FAIL, CANNOT PARSE (test.ml 131:2)

File "source_jane_street.ml", line 768, characters 18-19:
768 |   let e = stack_ a#b in
                        ^
Error: Syntax error
=====================================================
